# moment-service

./: .env.example  .gitignore  AGENTS.md  API_DOCUMENTATION.md  BACKEND_APIS.md  pyproject.toml  requirements.txt
app/: dependencies.py  main.py  schemas.py  schemas_sync.py
app/routers/: ai.py  auth.py  devices.py  realtime.py  storage.py  sync.py
app/services/: ai.py
scripts/: test_ai_real.py  test_transcribe_local.py  verify_remote.py
supabase/migrations/: 20240128000000_initial_schema.sql  20260130120000_add_note_fields.sql  20260130130000_add_note_images.sql  20260202000000_update_todo_items.sql  20260215000000_add_user_ai_stats.sql  20260215142000_add_note_parent_link.sql  20260227130000_add_transcript_segments.sql
tests/: test_ai.py  test_auth.py  test_devices.py  test_realtime.py  test_storage.py  test_sync.py
