[project]
name = "moment-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.128.5",
    "google-genai>=1.47.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.83",
    "langchain-openai>=0.3.35",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.3",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
